--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,11 +6,10 @@
 
 <% if Current.user %>
   <%= form_with model: message do |form| %>
-    <% form.object.errors[:content].tap do |errors| %>
+    <% form.errors(:content) do |errors| %>
       <%= form.label :content %>
       <%= form.rich_text_area :content, aria: {
         describedby: {form.field_id(:content, :validation_message) => errors.any?},
-        invalid: errors.any?
       } %>
       <% if errors.any? %>
         <%= tag.span errors.to_sentence, id: form.field_id(:content, :validation_message) %>
