Abstract Validation Message rendering
Declare `ValidationMessageFormBuilder#validation_message` to combine all
of the newly introduced `FormBuilder` concepts:

For fields _without any errors_, do nothing and render nothing.

When a field has any errors for the attribute, create an instance of
`ActionView::Helpers::TagHelper#tag` that is pre-built with the correct
DOM `[id]` attribute, generated by `validation_message_id`.

When passed block, yield the collection of `ActiveModel::Error`
instances along with the pre-built `tag`. The calling block is
responsible for building an element to contain the validation messages.

When a block _is not given_, render a `<span>` element with the
pre-built `tag` instance.

In either case, pass along any attributes passed as part of the options.

--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -1,28 +1,22 @@
 <%= form_with(model: authentication) do |form| %>
-  <% form.errors(:base) do |errors| %>
-    <% if errors.any? %>
-      <%= tag.span errors.to_sentence, aria: { live: "assertive" } %>
-    <% end %>
+  <%= form.validation_message :base, aria: { live: "assertive" } do |errors, tag| %>
+    <%= tag.p errors.to_sentence %>
   <% end %>
 
-  <% form.errors(:username) do |errors| %>
-    <%= form.label :username %>
-    <%= form.text_field :username, aria: {
-      describedby: form.validation_message_id(:username),
-    } %>
-    <% if errors.any? %>
-      <%= tag.span errors.to_sentence, id: form.validation_message_id(:username) %>
-    <% end %>
+  <%= form.label :username %>
+  <%= form.text_field :username, aria: {
+    describedby: form.validation_message_id(:username),
+  } %>
+  <%= form.validation_message :username do |errors, tag| %>
+    <%= tag.span errors.to_sentence %>
   <% end %>
 
-  <% form.errors(:password) do |errors| %>
-    <%= form.label :password %>
-    <%= form.password_field :password, aria: {
-      describedby: form.validation_message_id(:password),
-    } %>
-    <% if errors.any? %>
-      <%= tag.span errors.to_sentence, id: form.validation_message_id(:password) %>
-    <% end %>
+  <%= form.label :password %>
+  <%= form.password_field :password, aria: {
+    describedby: form.validation_message_id(:password),
+  } %>
+  <%= form.validation_message :password do |errors, tag| %>
+    <%= tag.span errors.to_sentence %>
   <% end %>
 
   <%= form.button %>
