--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,14 +6,12 @@
 
 <% if Current.user %>
   <%= form_with model: message do |form| %>
-    <% form.errors(:content) do |errors| %>
-      <%= form.label :content %>
-      <%= form.rich_text_area :content, aria: {
-        describedby: form.validation_message_id(:content),
-      } %>
-      <% if errors.any? %>
-        <%= tag.span errors.to_sentence, id: form.validation_message_id(:content) %>
-      <% end %>
+    <%= form.label :content %>
+    <%= form.rich_text_area :content, aria: {
+      describedby: form.validation_message_id(:content),
+    } %>
+    <%= form.validation_message :content do |errors, tag| %>
+      <%= tag.span errors.to_sentence %>
     <% end %>
 
     <%= form.button %>
