--- a/app/views/authentications/new.html.erb
+++ b/app/views/authentications/new.html.erb
@@ -1,23 +1,27 @@
 <%= form_with(model: authentication) do |form| %>
+  <%= form.validation_message_template do |messages, tag| %>
+    <%= tag.span(messages.to_sentence) %>
+  <% end %>
+
   <%= form.validation_message :base, aria: { live: "assertive" } do |errors, tag| %>
     <%= tag.p errors.to_sentence %>
   <% end %>
 
-  <%= form.label :username %>
-  <%= form.text_field :username, aria: {
-    describedby: form.validation_message_id(:username),
-  } %>
-  <%= form.validation_message :username do |errors, tag| %>
-    <%= tag.span errors.to_sentence %>
-  <% end %>
+  <div>
+    <%= form.label :username %>
+    <%= form.text_field :username, aria: {
+      describedby: form.validation_message_id(:username),
+    } %>
+    <%= form.validation_message :username %>
+  </div>
 
-  <%= form.label :password %>
-  <%= form.password_field :password, aria: {
-    describedby: form.validation_message_id(:password),
-  } %>
-  <%= form.validation_message :password do |errors, tag| %>
-    <%= tag.span errors.to_sentence %>
-  <% end %>
+  <div>
+    <%= form.label :password %>
+    <%= form.password_field :password, aria: {
+      describedby: form.validation_message_id(:password),
+    } %>
+    <%= form.validation_message :password %>
+  </div>
 
   <%= form.button %>
 <% end %>
