--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -7,10 +7,10 @@
 <% if Current.user %>
   <%= form_with model: message do |form| %>
     <%= form.validation_message_template do |messages, tag| %>
-      <%= tag.span(messages.to_sentence) %>
+      <%= tag.span(messages.to_sentence, class: "text-red-500 text-xs italic") %>
     <% end %>
 
-    <div>
+    <div class="flex flex-col mb-4 space-y-2">
       <%= form.label :content %>
       <%= form.rich_text_area :content, aria: {
         describedby: form.validation_message_id(:content),
@@ -18,7 +18,9 @@
       <%= form.validation_message :content %>
     </div>
 
-    <%= form.button %>
+    <div class="flex items-center justify-between">
+      <%= form.button class: "bg-blue-500 hover:bg-blue-700 disabled:opacity-75 disabled:cursor-not-allowed text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"%>
+    </div>
   <% end %>
 
   <%= button_to authentication_path, method: :delete do %>
